Description : modification report section one layout Bug ID: NA Reviewed By: Sanjay

--- a/technical/src/apps/user/patientcare/src/app/modules/patient-management/reports/section-one/section-one.component.css
+++ b/technical/src/apps/user/patientcare/src/app/modules/patient-management/reports/section-one/section-one.component.css
@@ -45,3 +45,6 @@
     margin-right: 2%;
     /* padding-right: 20; */
 }
+.list-layout{
+    padding: 10% 7px;
+}
